Fixes collapsilbe navbar jumping issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -180,6 +180,9 @@ ul.side-nav-kids {
   padding-left: 4px;
 }
 
+.collapse.in {
+  padding-bottom: 15px;
+}
 
 
 
